# 43513-01---Programming-for-Life-Sciences---4KP

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: deploy.yml  python-publish.yml
Exercises/W1/: Gillespie_simulation.html
Gillespie_Simulation_Lecture_Example/: Background.md
Project/: GillespieSimulation.ipynb  GillespieSimulation.py  Gillespie_Example.py  Gillespie_Simulation.ipynb  Gillespie_Simulation.py  Gillespie_Simulation_Lecture_Example.ipynb  utils.py
Project/classes/: Molecule.py  State.py
Project/states/: init_state.yaml  init_state_unnatural.yaml
Project/tests/: test_gillespie_simulation.py
Weeks/W1/: Gillespie_simulation.html  Gillespie_simulation.ipynb
Weeks/W2/: Review_Python.ipynb  proteinsfasta.sec
Weeks/Week 01 - Project introduction  task assignment/: Gillespie_simulation.ipynb
Weeks/Week 02 - Python basics/: Review_Python.html
Weeks/Week 05 - Version control/: Version control.html  Version control.ipynb
Weeks/Week 06 - Documentation/: Documentation.html  Documentation.ipynb
Weeks/Week 07 - Encapsulation & Packaging/: 07_encapsulation_packaging.ipynb
Weeks/Week 09 - Continuouse Integration/: continuous_integration.html  continuous_integration.ipynb
Weeks/Week 10 - Dependency management & containerization/: Dependency management.html  Dependency management.ipynb
src/: example01.py
src/classes/: ProgressTracker.py
src/configs/: params.txt
src/utils/: aux_funcs.py  global_vars.py
tests/: ProgressTracker.py  example01.py
