[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gillespie_simulation"
version = "0.1.0"
description = "A package for simulating stochastic chemical reactions using the Gillespie algorithm."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    # Add dependencies here in the format "package_name>=version"
]

[project.optional-dependencies]
dev = [
    # Add dev dependencies here
]

[tool.setuptools.packages.find]
where = ["Project"]



................