[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gillespie_simulation"
version = "0.1.0"
description = "A package for simulating stochastic chemical reactions using the Gillespie algorithm."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sergej Maul", email = "maulser@gmail.com"},
    {name = "Angelo Angonezi", email = "angelo.angonezi@unibas.ch"},
    {name = "Aurèl Leslauer", email = "aurele.lesslauer@unibas.ch"},
    {name = "Deniz Kaymak", email = "d.kaymak_6@hotmail.de"},
    {name = "Noa Bar Zohar", email = "noa.barzohar@unibas.ch"}
]
dependencies = [
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "fonttools>=4.54.1",
    "kiwisolver>=1.4.7",
    "llvmlite>=0.43.0",
    "matplotlib>=3.9.2",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pillow>=11.0.0",
    "pyparsing>=3.2.0",
    "pywin32>=307",
    "PyYAML>=6.0.2",
    "tqdm>=4.66.6"
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "fonttools>=4.54.1",
    "kiwisolver>=1.4.7",
    "llvmlite>=0.43.0",
    "matplotlib>=3.9.2",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pillow>=11.0.0",
    "pyparsing>=3.2.0",
    "pywin32>=307",
    "PyYAML>=6.0.2",
    "tqdm>=4.66.6"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "flake8",
    "flake8-docstrings",
    "mypy",
    "pylint"
    "pytest",
    "coverage",
    "flake8",
    "flake8-docstrings",
    "mypy",
    "pylint"
]

[tool.setuptools.packages.find]
where = ["Project"]