[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GillespieSimulation"
version = "0.1.0"
description = "A package for simulating stochastic chemical reactions using the Gillespie algorithm."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sergej Maul", email = "maulser@gmail.com"},
    {name = "Angelo Angonezi", email = "angelo.angonezi@unibas.ch"},
    {name = "Aurèle Lesslauer", email = "aurele.lesslauer@unibas.ch"},
    {name = "Deniz Kaymak", email = "d.kaymak_6@hotmail.de"},
    {name = "Noa Bar Zohar", email = "noa.barzohar@unibas.ch"}
]
dependencies = [] # defined in setup.py

[project.optional-dependencies]
dev = [] # defined in setup.py

[tool.setuptools.packages.find]
where = ["."]